Mensagens Dona Solange e Inae

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <h2 class="vibe">O noivo</h2>
                         <div class="story">
                             <p>Surfista, skatista e apaixonado pela pratica de esportes, ele é formado em Desenvolvimento de Sistemas e dava muito trabalho na escola. Sempre com muitos amigos e apaixonado por esportes ele já praticou tênis, futebol, judo, handball e graças a sua mãe, já vamos falar dela, entrou no curso de informática onde iniciou sua trajetória na sua ambígua vida de Nerd/Esportista.</p>
-                            <p>Juninho é o filho mais velho de Acacio e Márcia e tem 2 irmãos: Andressa, a do meio, sua parceira inseparável de vida e seu irmão caçula, seu melhor companheiro de risadas e de evolução. Além dos seus primos e tios que formam a família Egas Bela.</p>
+                            <p>Juninho é o filho mais velho de Acacio e Márcia e tem 2 irmãos: Andressa, a do meio, sua parceira inseparável de vida e seu irmão caçula, Andrews, seu melhor companheiro de risadas e de evolução. Além dos seus primos e tios que formam a família Egas Bela.</p>
                             <p>Muito observador ele sempre reparou com um olhar de atenção na Camila, com seu ditado clássico entre os amigos "Devagar se vai longe", por várias vezes pedia para seus amigos em comum, uma oportunidade para se aproximar dela, mas ele era muito bom em se enrolar e sempre deixava a Camila com a impressão errada...</p>
                         </div>
                     </div>
@@ -227,7 +227,7 @@
                             <span class="date">Novembro 05</span>
                             <h2>Fernando de Noronha</h2>
                             <div class="box-content">
-                                <p>A primeira férias que tiraram juntos, e não tinha lugar melhor para o Acacio levar a Camila. Fernando de Noronha, era o lugar. Ele com um certo receio, pois o lugar exige uma entrega de corpo e alma. E ela na expectativa, imaginando cada pedacinho. Foi surpreendida e surpreendeu. Mágica como só a Ilha conhece ser, fez um nova Camila. E do Acacio a certeza maior que era ela a pessoa. Aproveitaram tudo que a Ilha tinha para dar, compartilhar… E foi lá que planejaram a melhor ideia, o Save the Date, para mostrar e deixar registrado o quanto Fernando de Noronha faz parte desse sonho. </p>
+                                <p>A primeira férias que tiraram juntos, e não tinha lugar melhor para o Acacio levar a Camila. Fernando de Noronha, era o lugar. Ele com um certo receio, pois o lugar exige uma entrega de corpo e alma. E ela na expectativa, imaginando cada pedacinho. Foi surpreendida e surpreendeu. Mágica como só a ilha é, fez um nova Camila. E do Acacio a certeza maior que era ela a pessoa. Aproveitaram tudo que a Ilha tinha para dar, compartilhar… E foi lá que planejaram a melhor ideia, o Save the Date, para mostrar e deixar registrado o quanto Fernando de Noronha faz parte desse sonho. </p>
                             </div>
                             
                         </div>
@@ -788,22 +788,29 @@
                     <div class="timeline-year start"><span>2016</span></div>
                     <div class="column six heart right">
                         <div class="box pattern">
-                            <span class="date">04 Agosto</span>
+                            <span class="date">17 Setembro</span>
                             <div class="guest">
-                                <p></p>
-                                <span class="name">Acacio Egas</span>
+                                <span class="name">Solange</span>
+                                <p align="justify">Estou muito feliz com essa decisao tomada por voces. 
+                                Meu desejo é que sejam sempre abençoados e com muita união fiquem sempre juntos em todas as decisoes.
+                                Quero desejar muita Alegria e Felicidades para vocês. Nessa Uniao de vocês so consigo ver muito Amor de ambos. Realmente a Camila é uma menina de Sorte, e eu a mae sou uma pessoa Previlegiada.</p>
+                                <p>Amo Voces.</p>
                             </div>
                         </div>
                     </div>
-                    <!--<div class="column six heart left movetop">
+                    <div class="column six heart left movetop">
                         <div class="box pattern">
-                            <span class="date">24 July</span>
+                            <span class="date">19 Setembro</span>
                             <div class="guest">
-                                <p>Quisque aliquet erat condimentum sit aptent varius convallis quam a scelerisque nulla accumsan suspendisse scelerisque  aliquet erat aliquet porta erat.</p>
-                                <span class="name">John Doe</span>
+                                <span class="name">Inaê</span>
+                                <p align="justify">Com imenso prazer e transbordando de amor estou aqui, agradecendo de todo coração o convite para ser madrinha desse momento único. 
+                                <br>Minha amizade com o Ju começou de uma semente plantada por nossas mães, e passaremos para os nossos filhos com toda certeza. Hoje, somos muito mais que amigos, somos uma linda FAMÍLIA de amigos, que acredita que a ALEGRIA compartilhada é ALEGRIA redobrada. Quanta sorte! A arte do encontro é sensacional, as almas se reconhecem e caminham juntas de uma forma leve e espontânea. </p>
+                                <p align="justify">A Camila chegou para dar um toque especial na nossa “panela velha”, chegou com seu jeitinho reservado e tímido, e não conquistou só o coração do nosso surfista da camiseta furada, conquistou todos os corações que o acompanhavam. Nessa fase do casamento, sem saber, a Camila me presenteou. Não tenho irmãos e admiro muito o amor dos irmãos Egas, tenho eles como irmãos que a vida me deu. A Camila me fez sentir a emoção de ter um irmão casando quando fez eu participar do nascimento do convite, e de mãos dadas transbordamos de emoção. Obrigada!</p>
+                                <p>Um novo ciclo vai iniciar, cheio de descobertas e aprendizado. Quero estar ao lado de vocês para cuidar, amar e amar.</p>
+                                <p>Que venha a chuva de arroz e o dia mais esperado de 2016!</p>
                             </div>
                         </div>
-                    </div>-->
+                    </div>
                     <!--<div class="column six heart right">
                         <div class="box pattern">
                             <span class="date">24 July</span>
