--- a/index.html
+++ b/index.html
@@ -728,6 +728,13 @@
                         <div class="corners-topright"></div>
                         <div class="corners-bottomright"></div>
                     </li>
+                    <li>
+                        <img src="images/image.png" alt="">
+                        <div class="corners-topleft"></div>
+                        <div class="corners-bottomleft"></div>
+                        <div class="corners-topright"></div>
+                        <div class="corners-bottomright"></div>
+                    </li>                    
                 </ul>
                 <!--<ul class="small-box corner">
                     <li>
