--- a/index.html
+++ b/index.html
@@ -729,7 +729,11 @@
                         <div class="corners-bottomright"></div>
                     </li>
                     <li>
-                        <img src="images/image.png" alt="">
+                        <a href="images/image.png" class="portfolio-hover">
+                            <div class="portfolio-info">
+                                <img src="images/image.png" alt="image">
+                            </div>
+                        </a>
                         <div class="corners-topleft"></div>
                         <div class="corners-bottomleft"></div>
                         <div class="corners-topright"></div>
