MEnsagem Tio Beto e Caio

--- a/index.html
+++ b/index.html
@@ -822,24 +822,30 @@
                             </div>
                         </div>
                     </div>
-                    <!--<div class="column six heart right">
+                    <div class="column six heart right">
                         <div class="box pattern">
-                            <span class="date">24 July</span>
+                            <span class="date">30 Setembro</span>
                             <div class="guest">
-                                <p>Quisque aliquet erat condimentum sit aptent varius convallis quam a scelerisque nulla accumsan suspendisse scelerisque  aliquet erat aliquet porta erat.Aptent varius convallis quam a scelerisque nulla accumsan suspendisse scelerisque  aliquet erat aliquet porta erat</p>
-                                <span class="name">John Doe</span>
+                                <span class="name">Roberto (Tio Beto)</span>
+                                <p align="justify">Caramba, falar o que nessa hora...<br>
+                                Bom,desejo muitas felicidades para os noivos e que DEUS abençoe essa união. Com certeza vou sempre rezar por vocês do meu jeito(vcs  sabem como né)kkkk. Camila ti amo muito, Junior ti  adoro tambem. Torço por vocês.</p> 
+                                Beijão e que OXALA abra seus caminhos de trabalho e felicidades!
                             </div>
                         </div>
-                    </div>-->
-                    <!--<div class="column six heart left">
+                    </div>
+                    <div class="column six heart right">
                         <div class="box pattern">
-                            <span class="date">24 July</span>
+                            <span class="date">03 Outubro</span>
                             <div class="guest">
-                                <p>Quisque aliquet erat condimentum sit aptent varius convallis quam a scelerisque nulla accumsan suspendisse scelerisque  aliquet erat aliquet porta erat.Quisque aliquet erat condimentum sit aptent varius convallis quam a scelerisque nulla accumsan suspendisse scelerisque  aliquet erat aliquet porta erat</p>
-                                <span class="name">John Doe</span>
+                                <span class="name">Caio Mulero</span>
+                                <p align="justify">"Primeiramente, estou muito feliz em fazer parte da história e desse grande momento na vida de vocês.</p> 
+                                <p align="justify">Juro que não esperava o convite para ser padrinho (já que estava na terceira lista rs), no qual fiquei surpreso e ao mesmo tempo honrado.</p>
+                                <p align="justify">Vocês formam um grande casal, duas pessoas especiais que eu admiro e tenho como exemplo. <br>Espero que vocês sejam muito felizes nessa nova etapa.</p>
+                                <p align="justify">Tenho certeza que irão construir uma linda família e encher a casa do tio Acácio e da tia Márcia, e da dona Solange de netos rs<br>AMO VOCÊS!!</p>
+                                <p align="justify">Obs: Júnior, não esquece do campeonato de futevolei dia 12/11 em SP. Vai ser corrido, mas vai dar tempo, fica tranquilo, vamos chegar com o troféu no seu casamento rs"</p>
                             </div>
                         </div>
-                    </div>-->
+                    </div>
                     <!--<div class="column six heart right">
                         <div class="box pattern">
                             <span class="date">24 July</span>
