Mensagem Luana e Tia Suely

--- a/index.html
+++ b/index.html
@@ -846,6 +846,30 @@
                             </div>
                         </div>
                     </div>
+                    <div class="column six heart left">
+                        <div class="box pattern">
+                            <span class="date">17 Outubro</span>
+                            <div class="guest">
+                                <span class="name">Luana</span>
+                                <p align="justify">Lembro-me quando conheci uma menina dócil, cheia de amor e de vida, que me auxiliou nos primeiros passos para o aprendizado de um novo emprego, não imaginava que uma simples colega de empresa fosse virar uma amiga de vida, de aventuras, de desabafos e de tantos momentos de alegria que passamos juntas. Apesar da pequena distância da vida, nunca deixei de torcer por você e é incrível estar presente nesse momento tão importante e tão sonhado, só tenho a desejar felicidade, cumplicidade, sabedoria, amizade, respeito e muito amor ao casal!!</p> 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column six heart left">
+                        <div class="box pattern">
+                            <span class="date">21 Outubro</span>
+                            <div class="guest">
+                                <span class="name">Suely Ferreira</span>
+                                <p align="justify">Camila, foi tudo muito rápido. <br>
+                                    Tia, estou namorando... <br>
+                                    Tia, vou noivar... <br>
+                                    Tia, vou casar. <br>
+                                    Curti muito todas essas fases do relacionamento.</p>
+                                    <p align="justify">Camila, tenha certeza de que sua escolha trouxe para nossa família "Ferreira" mais um membro maravilhoso. Junior foi chegando devagarinho, conquistando um lugar no coração de todos (sem exceção). Parabéns ao casal, mantenham sempre o respeito, a cumplicidade e o companheirismo para que a felicidade se multiplique a cada dia de suas vidas e as dificuldades sejam superadas com muita sabedoria.</p>
+                                    Que Deus abençoe esta união e que o amor, o qual os uniu, permaneça para sempre em seus corações.
+                            </div>
+                        </div>
+                    </div>
                     <!--<div class="column six heart right">
                         <div class="box pattern">
                             <span class="date">24 July</span>
