--- a/index.html
+++ b/index.html
@@ -866,10 +866,21 @@
                                     Tia, vou casar. <br>
                                     Curti muito todas essas fases do relacionamento.</p>
                                     <p align="justify">Camila, tenha certeza de que sua escolha trouxe para nossa família "Ferreira" mais um membro maravilhoso. Junior foi chegando devagarinho, conquistando um lugar no coração de todos (sem exceção). Parabéns ao casal, mantenham sempre o respeito, a cumplicidade e o companheirismo para que a felicidade se multiplique a cada dia de suas vidas e as dificuldades sejam superadas com muita sabedoria.</p>
-                                    Que Deus abençoe esta união e que o amor, o qual os uniu, permaneça para sempre em seus corações.
+                                    <p align="justify">Que Deus abençoe esta união e que o amor, o qual os uniu, permaneça para sempre em seus corações.</p>
                             </div>
                         </div>
                     </div>
+                    <div class="column six heart left">
+                        <div class="box pattern">
+                            <span class="date">24 Outubro</span>
+                            <div class="guest">
+                                <span class="name">Bárbara Ribas</span>
+                                <p align="justify">Sou quase uma estranha no pedaço... mas posso dizer que a alegria e sintonia de vcs é contagiante, o amor nessa união é sem dúvida o segredo da felicidade descrita nas histórias e estampada nas fotos. Camila é lindo ver vcs juntos, mais ainda por saber o quanto vcs são merecedores um do outro. Juninho é um cara sensacional "um menino de ouro" e vc sem dúvida é a princesa em forma de mulher dos sonhos dele. Torço e vibro por vcs. </p>
+                                <p align="justify">Mto Amor e dias lindos hj amanhã e sempre.💗💗💗💗</p>
+                            </div>
+                        </div>
+                    </div>
+                    
                     <!--<div class="column six heart right">
                         <div class="box pattern">
                             <span class="date">24 July</span>
