--- a/index.html
+++ b/index.html
@@ -880,7 +880,17 @@
                             </div>
                         </div>
                     </div>
-                    
+                    <div class="column six heart right">
+                        <div class="box pattern">
+                            <span class="date">02 Novembro</span>
+                            <div class="guest">
+                                <span class="name">Flora e André</span>
+                                <p align="justify">Ouwn...tão bonito o amor! Vai dar tudo certo!!! <br> Se fosse para apostar eu apostaria no amor, sempre. Nós desejamos muito companheirismo, viagens, momentos deliciosos, aprendizado e troca. A comemoração dessa união é só o começo de uma nova etapa. Estaremos juntos.</p>  
+                                Beijos. Flora e André
+                                
+                            </div>
+                        </div>
+                    </div>
                     <!--<div class="column six heart right">
                         <div class="box pattern">
                             <span class="date">24 July</span>
